; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/input_hw/extr_gamepad.c_wayplay_1_write.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/input_hw/extr_gamepad.c_wayplay_1_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pad_index = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wayplay_1_write(i8 zeroext %0, i8 zeroext %1) #0 {
  %3 = alloca i8, align 1
  %4 = alloca i8, align 1
  store i8 %0, i8* %3, align 1
  store i8 %1, i8* %4, align 1
  %5 = load i32, i32* @pad_index, align 4
  %6 = icmp slt i32 %5, 4
  br i1 %6, label %7, label %12

7:                                                ; preds = %2
  %8 = load i32, i32* @pad_index, align 4
  %9 = load i8, i8* %3, align 1
  %10 = load i8, i8* %4, align 1
  %11 = call i32 @gamepad_write(i32 %8, i8 zeroext %9, i8 zeroext %10)
  br label %12

12:                                               ; preds = %7, %2
  ret void
}

declare dso_local i32 @gamepad_write(i32, i8 zeroext, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
